--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
+    "vue-draggabilly": "^1.1.0",
+    "vue-draggable-resizable": "^2.0.1",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
   },
